--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -2,13 +2,18 @@
   "name": "mobile",
   "version": "1.0.0",
   "main": "index.js",
+  "packageManager": "pnpm@8.15.9", 
   "scripts": {
     "dev": "expo start",
     "build:web": "npx expo export --platform web",
     "start": "expo start",
     "start:tunnel": "expo start --tunnel",
     "android": "expo run:android",
+    "build:android": "expo build:android",
+    "build:android:eas":"eas build -p android",
     "ios": "expo run:ios",
+    "build:ios": "expo build:ios",
+    "build:ios:eas":"eas build -p ios",
     "web": "expo start --web",
     "postinstall": "patch-package",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
