--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -23,3 +23,11 @@ EXPO_PUBLIC_LAYERSWAP_CLIENT_ID=""
 EXPO_PUBLIC_LAYERSWAP_API_KEY="API_KEY_LAYER_SWAP"
 
 EXPO_PUBLIC_GOOGLE_TAG_ID=
+
+
+# EKUBU API
+EXPO_PUBLIC_EKUBO_API="https://mainnet-api.ekubo.org"
+EXPO_PUBLIC_EKUBO_ROUTE_API="https://quoter-mainnet-api.ekubo.org"
+
+# AVNU API
+EXPO_PUBLIC_AVNU_API="https://starknet.api.avnu.fi"
