--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -5,6 +5,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "build:web": "tsc -p tsconfig.web.json",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
@@ -21,16 +22,15 @@
     "@noble/ciphers": "0.4.1",
     "@noble/curves": "1.3.0",
     "@noble/hashes": "1.3.3",
+    "@noble/secp256k1": "^1.7.1",
     "@nostr-dev-kit/ndk": "^2.10.1",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@scure/base": "1.1.5",
     "@tanstack/react-query": "^5.40.0",
-    "@webbtc/webln-types": "^2.1.0",
     "bip39": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zustand": "^4.5.2",
-    "@noble/secp256k1": "^1.7.1"
+    "zustand": "^4.5.2"
   },
   "peerDependencies": {
     "@nostr-dev-kit/ndk": "^2.10.1",
@@ -45,7 +45,7 @@
     ".": {
       "import": "./dist/index.mjs",
       "require": "./dist/index.js",
-      "browser": "./dist/index.global.js",
+      "browser": "./dist/index.web.js",
       "types": "./dist/index.d.ts"
     }
   },
@@ -64,7 +64,6 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-native": "^4.1.0",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.2.5",
