--- a/packages/afk_nostr_sdk/tsconfig copy 2.json
+++ b/packages/afk_nostr_sdk/tsconfig copy 2.json
@@ -3,11 +3,11 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "composite": true,
-    "target": "ES2020",
-    "module": "ESNext",
+    "target": "ES6",
+    "module": "ES6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "jsx": "react-jsx",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "allowJs": true,
@@ -17,26 +17,8 @@
     "skipLibCheck": true,
     "declaration": true,
     "sourceMap": true,
-    "strict": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    }
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.js",
-    "src/**/*.jsx",
-    "src/index.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/*.test.ts",
-    "**/*.test.tsx"
-  ],
-  "references": [
-    { "path": "./tsconfig.node.json" }
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"],
+
 }
