--- a/mobile-template/package.json
+++ b/mobile-template/package.json
@@ -21,6 +21,7 @@
     "@getalby/bitcoin-connect-react": "^3.5.3",
     "@getalby/lightning-tools": "^5.0.3",
     "@getalby/sdk": "^3.6.1",
+    "@noble/curves": "^1.4.0",
     "@nostr-dev-kit/ndk": "^2.10.0",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
@@ -38,6 +39,7 @@
     "afk_nostr_sdk": "workspace:*",
     "bip39": "^3.1.0",
     "common": "workspace:*",
+    "crypto-es": "^2.1.0",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
     "echarts": "^5.6.0",
@@ -50,9 +52,6 @@
     "expo-camera": "~16.1.6",
     "expo-clipboard": "^6.0.3",
     "expo-constants": "~17.1.6",
-    "@noble/curves": "^1.4.0",
-    "crypto-es": "^2.1.0",
-
     "expo-crypto": "~14.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
@@ -81,6 +80,7 @@
     "react-dom": "19.0.0",
     "react-markdown-editor-lite": "^1.3.4",
     "react-native": "0.79.2",
+    "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keychain": "^8.2.0",
@@ -104,9 +104,9 @@
     "react-native-webview": "13.13.5",
     "react-native-webview-crypto": "^0.0.25",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "3.3.2",
     "starknet": "6.11.0",
     "starknetkit": "^2.6.1",
+    "tailwindcss": "3.3.2",
     "viem": "2.21.60",
     "wagmi": "^2.12.8",
     "zustand": "^4.5.2"
