--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -1,10 +1,11 @@
 {
   "name": "afk_nostr_sdk",
   "version": "0.0.1",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "mkdir -p dist",
+    "build": "tsup",
+    "build:types": "tsc --emitDeclarationOnly --declaration --outDir dist",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
@@ -21,37 +22,37 @@
     "@noble/ciphers": "0.4.1",
     "@noble/curves": "1.3.0",
     "@noble/hashes": "1.3.3",
-    "@noble/secp256k1": "^1.7.1",
-    "@nostr-dev-kit/ndk": "^2.10.0",
+    "@nostr-dev-kit/ndk": "^2.10.1",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@scure/base": "1.1.5",
     "@tanstack/react-query": "^5.40.0",
     "@webbtc/webln-types": "^2.1.0",
     "bip39": "^3.1.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "zustand": "^4.5.2"
   },
   "peerDependencies": {
-    "@nostr-dev-kit/ndk": "^2.10.0",
+    "@nostr-dev-kit/ndk": "^2.10.1",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@tanstack/react-query": "^5.40.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "zustand": "^4.5.2"
   },
-  "module": "dist/index.js",
+  "module": "dist/index.mjs",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
+      "import": "./dist/index.mjs",
       "require": "./dist/index.js",
+      "default": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@nostr-dev-kit/ndk": "^2.10.0",
+    "@nostr-dev-kit/ndk": "^2.10.1",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@tanstack/react-query": "^5.40.0",
     "@types/react": "^18.3.1",
@@ -67,21 +68,11 @@
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.2.5",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tsup": "^8.0.2",
     "typescript": "~5.3.3",
     "zustand": "^4.5.2"
   },
-  "private": true,
-  "files": [
-    "dist"
-  ],
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./dist/index.d.ts"
-      ]
-    }
-  }
+  "private": true
 }
