--- a/packages/afk_nostr_sdk/tsconfig.json
+++ b/packages/afk_nostr_sdk/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./",
-    "composite": true,
+    "rootDir": ".",
+    "composite": false,
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "ESNext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "jsx": "react-jsx",
     "moduleResolution": "node",
@@ -17,32 +17,8 @@
     "skipLibCheck": true,
     "declaration": true,
     "sourceMap": true,
-    "strict": false,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    }
+    "strict": false
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.js",
-    "src/**/*.jsx",
-    "src/context/index.tsx",
-    "src/context/NostrContext.tsx",
-    "src/context/LightningContext.tsx",
-    "src/context/TanstackProvider.tsx",
-    "src/hooks/index.ts",
-    "src/index.ts",
-    "index.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/*.test.ts",
-    "**/*.test.tsx"
-  ],
-  "references": [
-    { "path": "./tsconfig.node.json" }
-  ]
+  "include": ["src/**/*", "index.ts"],
+  "exclude": ["node_modules", "dist"]
 }
