--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -32,9 +32,11 @@
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
+    "@scure/bip32": "^1.7.0",
     "@starknet-react/chains": "^0.1.7",
     "@starknet-react/core": "^2.8.2",
     "@tanstack/react-query": "^5.40.0",
+    "afk_nostr_sdk": "workspace:*",
     "afk_react_sdk": "workspace:*",
     "axios": "^1.7.2",
     "common": "workspace:*",
@@ -44,6 +46,7 @@
     "framer-motion": "^11.3.28",
     "get-starknet-core": "^3.3.0",
     "js-sha256": "^0.11.0",
+    "@noble/hashes": "1.3.3",
     "next": "^14.2.3",
     "next-auth": "^4.24.11",
     "nostr-tools": "^2.7.0",
@@ -60,8 +63,7 @@
     "wagmi": "^2.13.4",
     "yup": "^1.6.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2",
-    "afk_nostr_sdk": "workspace:*"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
