--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -20,21 +20,24 @@
     "@getalby/lightning-tools": "^5.0.3",
     "@getalby/sdk": "^3.6.1",
     "@noble/ciphers": "0.4.1",
-    "@noble/curves": "1.3.0",
-    "@noble/hashes": "1.3.3",
-    "@noble/secp256k1": "^1.7.1",
-    "@nostr-dev-kit/ndk": "^2.10.1",
-    "@nostr-dev-kit/ndk-wallet": "^0.2.0",
-    "@scure/base": "1.1.5",
+    "@noble/curves": "1.9.0",
+    "@noble/hashes": "1.8.0",
+    "@noble/secp256k1": "^2.2.3",
+    "@scure/bip39": "^1.6.0",
+    "@nostr-dev-kit/ndk": "^2.14.9",
+    "@nostr-dev-kit/ndk-wallet": "^0.5.13",
     "@tanstack/react-query": "^5.40.0",
     "bip39": "^3.1.0",
+    "@scure/bip32": "^1.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zustand": "^4.5.2"
   },
   "peerDependencies": {
-    "@nostr-dev-kit/ndk": "^2.10.1",
-    "@nostr-dev-kit/ndk-wallet": "^0.2.0",
+    "@nostr-dev-kit/ndk": "^2.14.9",
+    "@nostr-dev-kit/ndk-wallet": "^0.5.13",
+    "@scure/bip39": "^1.6.0",
+    "@scure/bip32": "^1.7.0",
     "@tanstack/react-query": "^5.40.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
