--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -109,6 +109,7 @@
     "expo-splash-screen": "~0.27.7",
     "expo-sqlite": "^14.0.6",
     "expo-status-bar": "~1.12.1",
+    "react-native-css-interop": "^0.1.22",
     "expo-web-browser": "^13.0.3",
     "fake-indexeddb": "^6.0.0",
     "fast-text-encoding": "^1.0.6",
@@ -183,13 +184,6 @@
     "prettier": "^3.3.3",
     "typescript": "~5.3.3"
   },
-  "private": true,
-  "resolutions": {
-    "@noble/hashes": "1.3.3",
-    "multiformats": "9.9.0"
-  },
-  "overrides": {
-    "@noble/hashes": "1.3.3",
-    "multiformats": "9.9.0"
-  }
+  "private": true
+
 }
