--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -28,8 +28,8 @@
     "@chakra-ui/theme-tools": "^2.1.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@nostr-dev-kit/ndk": "2.10.1",
-    "@nostr-dev-kit/ndk-wallet": "^0.2.0",
+    "@nostr-dev-kit/ndk": "^2.14.9",
+    "@nostr-dev-kit/ndk-wallet": "^0.5.13",
     "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@scure/bip32": "^1.7.0",
